# ChangeLog for sys-apps/mtree
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/mtree/ChangeLog,v 1.14 2009/03/14 11:54:05 nixnut Exp $

  14 Mar 2009; nixnut <nixnut@gentoo.org> mtree-2007.4.ebuild:
  ppc stable #258256

  09 Feb 2009; Markus Meier <maekke@gentoo.org> mtree-2007.4.ebuild:
  amd64/x86 stable, bug #258256

  14 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/mtree-2007.4+glibc-2.8.patch, mtree-2007.4.ebuild:
  Add patch to build with glibc 2.8, fixes bug #225623.

  27 Jan 2008; Mike Frysinger <vapier@gentoo.org> mtree-2007.4.ebuild:
  Add workaround for parallel build failure in libnbcompat with nbtypes.h.

*mtree-2007.4 (26 Jan 2008)

  26 Jan 2008; Mike Frysinger <vapier@gentoo.org> +mtree-2007.4.ebuild:
  Version bump.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org> mtree-1.5.ebuild:
  ppc stable, bug #202180

  14 Dec 2007; Christian Faulhammer <opfer@gentoo.org> mtree-1.5.ebuild:
  stable x86, bug 202180

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/mtree-1.5-gcc4.patch, mtree-1.5.ebuild:
  Add patch to build with GCC 4 and mark ~amd64.

  07 May 2004; David Holm <dholm@gentoo.org> mtree-1.5.ebuild:
  Added to ~ppc.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> mtree-1.5.ebuild:
  Add die following econf for bug 48950

  16 Apr 2004; Michael McCabe <randy@gentoo.org> mtree-1.5.ebuild:
  adding s390 keywords

*mtree-1.5 (09 Sep 2003)

  09 Sep 2003; rob holland <tigger@gentoo.org> mtree-1.5.ebuild:
  initial version
