@@ -1,8 +1,4 @@
-AUX mtree-1.5-gcc4.patch 1417 RMD160 314f940d6072b1cb559660199fb7a4ad91d04aa8 SHA1 9248e06676c4b65eadf151b6e49520d79c2c61c6 SHA256 66d9b65ee3841c1467f3dd5525eac6e608a8d52a786f9f2668f5e8847618f085
-AUX mtree-2007.4+glibc-2.8.patch 727 RMD160 f8f4f3f761244715622c629a4671aa03a6b19695 SHA1 e0a749d005e7963127b4f52f9457a0087edc19eb SHA256 ab0ed6fe31390c9013c5fa1458c1a2fcaaabd37cbdbc676c7a27800ca6004059
-DIST bootstrap-pkgsrc.tar.gz 1193805 RMD160 94d6604e51bbded5a31db7950d4d460ddfaefc47 SHA1 52864525e4d7114195b5b30793d3772e3e289b9c SHA256 23c803ece9ac0a98f408bd693f17ed9de95b4adee1655b2074680eef421c15a5
-DIST pkgsrc-2007Q4.tar.bz2 19165770 RMD160 5b5682c44c80138967b03d59a60913b72cb31159 SHA1 82b99af750cdf61c1fda6d7c86db594b344aca08 SHA256 23bf97b835da49c3ea3732c5600a3b35ba1828f30bd4c97377b1d214a8d62652
-EBUILD mtree-1.5.ebuild 835 RMD160 ae86a118bd1d9e7b39d30a181c1d0f43aac75ce5 SHA1 45c55d0d7d808c5fec1a5d7201ba1d3c14307739 SHA256 65002fed44ad69b715273e3272b1ca9d3518fcac3a560f849a3a111eaddd67b0
-EBUILD mtree-2007.4.ebuild 1121 RMD160 cac65f6e4b48d2b6e46f3617049169bdd93b4f2b SHA1 d3697df152508c9ade881d31c0d6f5b603635a64 SHA256 f0cc106a1aef85407beb570b4f4cc4ea9ab42ff006bbbc046f8c98e83e6d41c8
-MISC ChangeLog 1653 RMD160 822c3d42bea658ebf0fc6c45f4d5c019a37edc20 SHA1 2c71b950e28fb5fe5560d61d4351c9221814e7eb SHA256 4b60145966a42c1ca49f4f6543201943b52dfbbc601a8f6ac3159230dc50f8aa
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+DIST mtree-1.0.tar.gz 107599 RMD160 91533c5d7381af9afac2889e1bb26f5609d07d9e SHA1 2b98228dd34611963ee9ef8863ae1d8d7818ede1 SHA256 d58e180e48f298caf0ae0e9153b77b7a025898b7e978d51587a63318b0e3692f
+EBUILD mtree-1.0.ebuild 594 RMD160 4907bac6f5c7695d30db00bae5798c2b031c4a8d SHA1 d8bbb795192e3744f397d50cedd5d3fa64fd7660 SHA256 e79d94b6836fb6e409823e2352470c40843006dfc12e1bfc7c72228380024419
+MISC ChangeLog 1916 RMD160 ef627d630b91e18a1549316c3f9c47dd18c848cd SHA1 ce8a61af92126dc8a78a9fc127f5b8794091f49c SHA256 f7260efe1efba6c22038484583b890348ed0ac044683e4e45ff5e47cc36c6842
+MISC metadata.xml 165 RMD160 84307ea324cd4f0f46d52f2fa096a1873e2fbe53 SHA1 c7b83ef947fe7e8273cc512fee9bba06586a58f9 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a
